<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="mobpro.viqi.sqlitetest.MainActivity">
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_margin="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/create"
            android:onClick="goToCreate"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRead"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/read"
            android:onClick="goToRead"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/update"
            android:onClick="goToUpdate"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/delete"
            android:onClick="goToDelete"/>

    </LinearLayout>

</RelativeLayout>
